fix(reboots): change color to improve contrast

--- a/src/base.css
+++ b/src/base.css
@@ -39,6 +39,7 @@
   --color-panel-bg: #0b0b0f75;
   --color-error-light: #d4586f;
   --bs-link-color-rgb: 0, 100, 255;
+  --color-reboot: #ff6beb;
 
   /* QuickGlance */
   --color-status-ok: #76a34a;
